# code-review-agents

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .pymarkdown.json  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  Review-Agent.json  pyproject.toml  renovate.json
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-image.yml  ci.yaml  container-security-scan.yml
.serena/: project.yml
.serena/memories/: architecture.md  conventions.md  core.md  memory_maintenance.md  suggested_commands.md  task_completion.md  tech_stack.md
deploy/: configmap.yaml  pod.yaml  secret.yaml.example  secrets.example.yaml  service.yaml
docs/: a2a-api-design.md  docstring-lint-policy-spec.md  eval-concurrent-log-attribution-fix-spec.md  eval-report-per-item-detail-spec.md  eval-seeded-mutation-injection-design.md  eval-seeded-set-duplicate-combo-fix-spec.md  evaluation-pipeline-design.md  github-mcp-streamable-http-migration-spec.md  goldset-per-stack-spec.md  granite-structured-output-failure-spec.md  lead-engineer-agent-design.md  mcp-connection-stabilization-spec.md  pr-info-collector-tooluse-fix-spec.md  react-angular-agent-skills-spec.md  review-agent-workflow-spec.md  review-agents-design.md  review-knowledge-provisioning-options.md  review-orchestrator-infra-exception-propagation-spec.md  svelte-agent-skills-spec.md
docs/adr/: 0001-large-diff-review-scope-policy.md  0002-workflow-externalization-langflow-dify.md  0003-github-mcp-startup-retry-strategy.md  0004-mcp-client-session-sharing.md
docs/tools/: url_fetch.md
evaluation/: EVALUATION_PLAN.md  PR_COLLECTOR_ACCURACY_GEMMA4_E4B_AFTER_FIX.md  PR_COLLECTOR_ACCURACY_GEMMA4_E4B_DETERMINISTIC.md  README.md  RUBRIC.md  RUNBOOK.md
evaluation/config/: seeded_mutations.json
evaluation/data/: pr_collector_repeated_google_gemma-4-e4b.jsonl
evaluation/input/: pr_candidates_raw.json  pr_targets.example.json  pr_targets.json  pr_targets_angular.json  pr_targets_b2b2c_tagged.json  pr_targets_react.json  pr_targets_svelte.json  pr_targets_vue.json  repo_candidates.json  selection_checklist.md
evaluation/schema/: gold_pr_item.schema.json  seeded_item.schema.json
evaluation/tools/: a2a_client.py  analyze_pr_collector_repeated.py  build_gold_set.py  build_seeded_set.py  convert_tagged_targets.py  discord_notify.py  discover_candidate_prs.py  measure_pr_info_response.py  run_agent_evaluation.py  run_evaluation_pipeline.sh  score_evaluation.py  verify_a2a_api.py  verify_pr_collector_repeated.py
plan/: a2a-api-implementation.md  lead-engineer-agent.md
src/code_review_agent/: __init__.py
tests/a2a/: test_models.py  test_sanitizers.py  test_task_store.py
tests/agents/: test_base_reviewer.py  test_exceptions.py  test_lead_engineer.py  (+4 more)
(+105 files in other folders)
