[project]
name = "code-review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kuju63", email = "lh182051+src@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "strands-agents[openai]>=1.44.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
code-review-agent = "code_review_agent:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
