[project]
name = "code-review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kuju63", email = "lh182051+src@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "strands-agents-tools>=0.8.2",
    "strands-agents[openai]>=1.45.0",
    "tenacity>=9.0",
    "uvicorn[standard]>=0.50.2",
]

[project.scripts]
code-review-agent = "code_review_agent:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "D",
    "DOC102",
    "DOC201",
    "DOC202",
    "DOC402",
    "DOC403",
    "DOC501",
    "DOC502",
]
preview = true
explicit-preview-rules = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"evaluation/**" = ["D"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.16,<0.17",
]
